bug: fix overflowing tags

--- a/admin/controllers/images/views/show/style.css
+++ b/admin/controllers/images/views/show/style.css
@@ -88,6 +88,21 @@
 	bottom:0;
 	left:0;
 	background:rgba(255,255,255,0.7);
+
+	.image_tags{
+
+		& > .control {
+			max-width: 100%;
+
+			.tag {
+				max-width: 90%;
+				overflow: hidden;
+				display: block;
+				text-overflow: ellipsis;
+				align-content: center;
+			}
+		}
+	}
 }
 .bigger {
 	font-size:120%;
